# Python-Core

./: Boolean.py  block_instructions.py  boolean_algebra.py  complex_num.py  f-string.py  for.py  format_output.py  id.py  if_else.py  in.py  input.py  is.py  main.py  math_modul.py  ord_chr.py  pass.py  plus_minus.py  range.py  smile.py  ternarni_operator.py  try_except_error.py  type.py  types.py  while.py
Collections/: dict._method.py  dict_smt.py  enumerate.py  list.py  list_methods.py  list_split.py  set.py  set_add.py  set_math_methods.py  set_methods.py  str.py  tuple.py  use_set_as_keys.py
Conteiners/: list.py  list_methods.py
Homework_Youtube_video/: 4_exe_.py  5_Youtube_1_exe_1.py  5_exe_find.py  5_exe_format.py  5_exe_split_join.py
Modul_1/: Exercise_1.py  Exercise_10.py  Exercise_11.py  Exercise_12.py  Exercise_13.py  Exercise_14.py  Exercise_15.py  Exercise_16.py  Exercise_2.py  Exercise_3.py  Exercise_4.py  Exercise_5.py  Exercise_6.py  Exercise_7.py  Exercise_8.py  Exercise_9.py  gps_length.py
Modul_11_/: main_create_file_for_exsercises.py
Modul_12_Seralization_files/: 12_theory_1_how_we_save_before.txt  12_theory_4_json.json  12_theory_5_1_use_csv.csv  12_theory_5_2_use_csv.csv  12_theory_5_3_use_csv.csv  data.json
Modul_2/: 23.07.09_HW_PIN to bankomat.py  example_10.py  exe_1.py  exe_10.py  exe_11.py  exe_12.py  exe_14.py  (+10 more)
Modul_7_Pip_packets/1_Youtube_Theory/my_package_parent/: README.md  setup.cfg
Modul_7_Pip_packets/9_Youtube_Practice/: setup.cfg
Modul_7_Pip_packets/9_Youtube_Practice/my_package_parent/my_package/: __init__.py  test.py
(+618 files in other folders)
