[metadata]
name = my_super_package_230828
version = 0.0.1
author = Me
author_email = author@example.com
description = This is my first test package
long_description = file: README.md
url = https://github.com/pypa/sampleproject
project_urls = 
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers = 
    Programming Language :: Python :: 3
    Licence :: OSI Approved :: MIT Licence
    Operating System :: OS Independent

[options]
package_dir = 
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src