[metadata]
name = my_super_package_310293
version = 0.0.1
author = Savenko
author_email = example@gmail.com
description = A small example 
long_description = file.README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject/issues
project_urls = 
    ; Bug Tracker = 
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",]

[options]
package_dir = src
packages = find:
python_requires = >=3.6
[option.packages.find]
where = src